<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Album Name -->

    <!-- Save Button -->

    <TextView
        android:id="@+id/musicTextViewTitle"
        android:layout_width="357dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:text="@string/song_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicImageViewAlbumCover" />

    <ImageView
        android:id="@+id/musicImageViewAlbumCover"
        android:layout_width="206dp"
        android:layout_height="203dp"
        android:layout_below="@id/musicTextViewTitle"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/musicTextViewDuration"
        android:layout_width="194dp"
        android:layout_height="33dp"
        android:layout_below="@id/musicImageViewAlbumCover"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/duration"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicTextViewTitle" />

    <TextView
        android:id="@+id/textViewAlbumName"
        android:layout_width="299dp"
        android:layout_height="38dp"
        android:layout_below="@id/musicTextViewDuration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="96dp"
        android:text="@string/album_name"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicImageViewAlbumCover" />

    <Button
        android:id="@+id/musicButtonSave"
        android:layout_width="167dp"
        android:layout_height="52dp"
        android:layout_below="@id/textViewAlbumName"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/musicBackButton"
        android:layout_width="32dp"
        android:layout_height="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />
</androidx.constraintlayout.widget.ConstraintLayout>