...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_bg"
    tools:context=".RecipeSearch">

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="339dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/search_bar"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/searchButton"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeToolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
...
