...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_bg"
    tools:context=".SavedRecipes">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/savedRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
